--- a/gamestyle.css
+++ b/gamestyle.css
@@ -145,7 +145,7 @@ hr { width:100%; height:1px; background: #fff }
 }
 
 h4{
-  margin-top: 5px;
+  margin-top: 2px;
   color: #6fa5e2;
   font-weight: bolder;
 }
@@ -153,4 +153,8 @@ h4{
 .navbar-brand{
   font-family: 'Cinzel', serif;
   margin-right: 40px;
+}
+
+.buttonmatch{
+  width: 350px;
 }
