--- a/gamestyle.css
+++ b/gamestyle.css
@@ -23,7 +23,7 @@ p{
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
- font-family: 'Work Sans', sans-serif;
+ font-family: 'Noto Sans', sans-serif;
  }
 
 h1{
@@ -37,15 +37,16 @@ h2{
   color:white;
   font-size: 24px;
   text-align: center;
+  font-weight: 600;
   font-family: 'Noto Sans', sans-serif;
 }
 
 body {
-    background-image: url(brickbackground.jpg);
+    background-image: url("images/brickbackground.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    font-family: 'Work Sans', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 hr { width:100%; height:1px; background: #fff }
@@ -54,6 +55,10 @@ hr { width:100%; height:1px; background: #fff }
 .navimage{
   height: 50px;
   width: 50px;
+}
+
+.nav-link{
+  font-weight:900;
 }
 
 .bg-light {
@@ -157,4 +162,9 @@ h4{
 
 .buttonmatch{
   width: 350px;
+}
+
+.btn-small{
+  font-size: 24px;
+  margin: 10px;
 }
