--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .jumbotron{
   background-image:
-      linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-      url("Evidence Wall Final.jpg");
+      linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+      url("images/Evidence Wall Final.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -12,7 +12,7 @@
 .jumbotronResume{
   background-image:
       linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
-      url("sanfrancisco.jpg");
+      url("images/sanfrancisco.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -57,9 +57,15 @@ h1{
 
 h2{
   color:black;
+  font-weight: bolder;
   font-size: 32px;
   text-align: center;
   font-family: 'Noto Sans', sans-serif;
+}
+
+h3{
+  font-size:  20px;
+  font-weight: bolder;
 }
 
 body {
@@ -67,7 +73,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    font-family: "Trebuchet MS";
+    font-family: 'Noto Sans', sans-serif;
 }
 
 hr { width:100%; height:1px; background: #fff }
@@ -120,4 +126,22 @@ hr { width:100%; height:1px; background: #fff }
 .navbar-brand{
   font-family: 'Cinzel', serif;
   margin-right: 40px;
+}
+
+.nav-link{
+  font-weight:900;
+}
+
+.no-bullets{
+  list-style-type: none;
+}
+
+.ability-score{
+  float:right;
+  color: #43bddb;
+}
+
+.thincontainer{
+  width: 80%;
+  margin:auto;
 }
