--- a/gamestyle.css
+++ b/gamestyle.css
@@ -77,15 +77,26 @@ hr { width:100%; height:1px; background: #fff }
   width: 100%;
 }
 
+.imagesmall{
+  display:block;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 300px;
+  }
+
 .imagemedium{
-  width: 500px;
+
+  display:block;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 600px;
 }
 
 .imagelarge{
   display:block;
   margin: 0 auto;
   width: 100%;
-  max-width: 600px;
+  max-width: 800px;
 }
 
 .imagecircle {
